--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
     <version>1.0-SNAPSHOT</version>
 
     <properties>
-        <kafka.version>0.10.3.0-SNAPSHOT</kafka.version>
+        <kafka.version>1.1.1</kafka.version>
         <confluent.version>3.1.1</confluent.version>
         <avro.version>1.7.7</avro.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
